# backend/api/swagger.yaml
@@ -29,12 +29,35 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/StoreInfo'
-        "400":
-          description: The specified store ID is invalid (not a number).
+        "500":
+          description: Unexpected error
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  /product/{productID}:
+    get:
+      tags:
+      - product
+      summary: return a product by ID
+      parameters:
+      - name: productID
+        in: path
+        description: The ID of the product to return.
+        required: true
+        content:
+          application/json:
+            schema:
+              type: string
+              example: "1"
+              x-content-type: application/json
+      responses:
+        "200":
+          description: A Product object.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductInfo'
         "500":
           description: Unexpected error
           content:
@@ -47,9 +70,9 @@ components:
       required:
       - address
       - email
-      - id
       - name
-      - phome
+      - phone
+      - storeId
       type: object
       properties:
         id:
@@ -73,6 +96,41 @@ components:
         name: i'm pasta
         id: "1"
         email: pasta@pasta.com
+    ProductInfo:
+      required:
+      - catogoryId
+      - description
+      - name
+      - price
+      - productId
+      - storage
+      type: object
+      properties:
+        productId:
+          type: string
+          example: "1"
+        name:
+          type: string
+          example: pasta
+        catogoryId:
+          type: string
+          example: "1"
+        description:
+          type: string
+          example: tasty pasta
+        price:
+          type: integer
+          example: 9999
+        storage:
+          type: integer
+          example: 1
+      example:
+        productId: "1"
+        catogoryId: "1"
+        price: 9999
+        name: pasta
+        description: tasty pasta
+        storage: 1
     Error:
       required:
       - code
@@ -81,5 +139,7 @@ components:
       properties:
         message:
           type: string
+          example: internal error
         code:
           type: integer
+          example: 3000
